# geometria_comp

./: Geometria_Comp.pro  Geometria_Comp.pro.user.e3c77eb  coord_2d.cpp  coord_2d.h  coord_3d.cpp  coord_3d.h  esfera.h  face.cpp  fecho2d.cpp  fecho2d.h  main.cpp  objeto.cpp  objeto.h  ordenacao.h  ordmatriz.cpp  poligono.cpp  poligono.h  quickhull3d.cpp  quickhull3d.h  transformacoes.cpp  transformacoes.h  triangulo.cpp  triangulo.h  vetor.cpp  vetor.h
OpenGL/: CG_OpenGL.pro  CG_OpenGL.pro.user.e3c77eb  coord_2d.h  face.cpp  face.h  fecho2d.cpp  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.ui  objeto.cpp  objeto.h  ordenacao.h  quickhull3d.cpp  quickhull3d.h  triangulacao.cpp  triangulacao.h  triangulo.cpp  triangulo.h  vetor.cpp  vetor.h
OpenGL/DICOM/ImageToOBJ/: CMakeLists.txt  ImageToOBJ.cxx
Simplex_Decomposition/: Simplex_Decomposition.pro  Simplex_Decomposition.pro.user.33febb8  crab.qrc  esfera.cpp  face.cpp  glwidget.cpp  glwidget.h  intersecet3d.h  intersect.h  intersect3d.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  objeto.cpp  objeto.h  ordmatriz.h  simplex.cpp  simplex.h  triangulacao.cpp  triangulacao.h  triangulo.cpp  vetor.cpp  vetor.h
